--- a/Process_Library/CMakeLists.txt
+++ b/Process_Library/CMakeLists.txt
@@ -12,3 +12,4 @@ esma_add_library(${this}
 if (OMP) 
   target_link_libraries(${this} PRIVATE OpenMP::OpenMP_Fortran)
 endif()
+target_link_libraries(${this} PRIVATE MAPL.profiler)
