--- a/ESMF/GOCART2G_GridComp/NI2G_GridComp/AMIP/NI2G_GridComp_ExtData.rc
+++ b/ESMF/GOCART2G_GridComp/NI2G_GridComp/AMIP/NI2G_GridComp_ExtData.rc
@@ -14,7 +14,7 @@ climNO3an3  'kg kg-1'  N    Y  F0   none      none     NO3AN3    /home/adasilva/
 #climNO3an3  'kg kg-1'  Y    Y  %y4-%m2-%d2T12:00:00   none      none     NO3AN3    /home/adasilva/opendap/fp/das/Y2017/M02/D01/GEOS.fp.asm.inst3_3d_aer_Nv.20170201_0000.V01.nc4
 
 # ======= Nitrate Sources ========
-EMI_NH3_BB   'kg m-2 s-1'  N      Y      %y4-%m2-%d2T12:00:00    none     0.778     biomass     ExtData/PIESA/sfc/QFED/NRT/v2.5r1_0.1_deg/Y%y4/M%m2/qfed2.emis_nh3.006.%y4%m2%d2.nc4
+EMI_NH3_BB   'kg m-2 s-1'  N      Y      %y4-%m2-%d2T12:00:00    none     0.778     biomass     ExtData/PIESA/sfc/QFED/v2.5r1/0.25/Y%y4/M%m2/qfed2.emis_nh3.006.%y4%m2%d2.nc4
 EMI_NH3_AG   'kg m-2 s-1'  Y      Y      %y4-%m2-%d2T12:00:00    none     none      nh3_emis    /dev/null
 EMI_NH3_EN   'kg m-2 s-1'  N      Y      %y4-%m2-%d2t12:00:00    none     none      nh3         ExtData/CEDS/sfc/NH3-em-anthro_CMIP_CEDS_gn.x2304_y1441_t12.%y4.nc4
 EMI_NH3_IN   'kg m-2 s-1'  Y      Y      %y4-%m2-%d2T12:00:00    none     none      nh3_emis    /dev/null
