--- a/ESMF/GOCART2G_GridComp/SS2G_GridComp/SS2G_instance_SS.rc
+++ b/ESMF/GOCART2G_GridComp/SS2G_GridComp/SS2G_instance_SS.rc
@@ -2,8 +2,8 @@
 # Resource file Sea Salt parameters
 #
 
-aerosol_radBands_optics_file: ExtData/PIESA/x/opticsBands_SS.v3_3.RRTMG.nc
-aerosol_monochromatic_optics_file: ExtData/PIESA/x/optics_SS.v3_3.nc
+aerosol_radBands_optics_file: ExtData/chemistry/AerosolOptics/v0.0.0/x/opticsBands_SS.v3_3.RRTMG.nc
+aerosol_monochromatic_optics_file: ExtData/chemistry/AerosolOptics/v0.0.0/x/optics_SS.v3_3.nc
 
 particle_radius_microns: 0.079 0.316 1.119 2.818 7.772
 
