--- a/ESMF/GOCART2G_GridComp/SU2G_GridComp/AMIP/SU2G_instance_SU.rc
+++ b/ESMF/GOCART2G_GridComp/SU2G_GridComp/AMIP/SU2G_instance_SU.rc
@@ -2,13 +2,13 @@
 # Resource file for Sulfer parameters.
 #
 
-aerosol_radBands_optics_file: ExtData/PIESA/x/opticsBands_SU.v1_3.RRTMG.nc
-aerosol_monochromatic_optics_file: ExtData/PIESA/x/optics_SU.v1_3.nc
+aerosol_radBands_optics_file: ExtData/chemistry/AerosolOptics/v0.0.0/x/opticsBands_SU.v1_3.RRTMG.nc
+aerosol_monochromatic_optics_file: ExtData/chemistry/AerosolOptics/v0.0.0/x/optics_SU.v1_3.nc
 
 nbins: 4
 
 # Volcanic pointwise sources
-volcano_srcfilen: ExtData/PIESA/sfc/volcanic_CARN_1978-2021_v202106/so2_volcanic_emissions_Carns.%y4%m2%d2.rc
+volcano_srcfilen: ExtData/chemistry/CARNS/v202106/sfc/volcanic_CARN_1978-2021_v202106/so2_volcanic_emissions_Carns.%y4%m2%d2.rc
 
 # Heights [m] of LTO, CDS and CRS aviation emissions layers
 aviation_vertical_layers: 0.0 100.0 9.0e3 10.0e3
