--- a/ESMF/GOCART2G_GridComp/SU2G_GridComp/AMIP/SU2G_GridComp_ExtData.rc
+++ b/ESMF/GOCART2G_GridComp/SU2G_GridComp/AMIP/SU2G_GridComp_ExtData.rc
@@ -47,7 +47,7 @@ SU_SHIPSO4    NA  N Y %y4-%m2-%d2t12:00:00 none none so4_shipping ExtData/chemis
 SU_AIRCRAFT NA  N Y %y4-%m2-%d2t12:00:00 none none so2_aviation   ExtData/chemistry/CEDS/v2021-04-21/L72/SO2-em-AIR-anthro_input4MIPs_emissions_CMIP_CEDS-2021-04-21_gn__aviation.x576_y361_z72_t12.%y4.nc4
 
 # DMS concentration
-SU_DMSO NA  Y Y %y4-%m2-%d2t12:00:00 none none conc ExtData/chemistry/MERRA2/v0.0.0/sfc/DMSclim_sfcconcentration.x360_y181_t12.Lana2011.nc4
+SU_DMSO NA  Y Y %y4-%m2-%d2t12:00:00 none none conc ExtData/chemistry/Lana/v2011/DMSclim_sfcconcentration.x360_y181_t12.Lana2011.nc4
 
 # Aviation emissions during the three phases of flight
 SU_AVIATION_LTO NA  Y Y %y4-%m2-%d2t12:00:00 none none so2_aviation /dev/null
