--- a/ESMF/GOCART_GridComp/CO_GridComp/AMIP/CO_GridComp_ExtData.rc
+++ b/ESMF/GOCART_GridComp/CO_GridComp/AMIP/CO_GridComp_ExtData.rc
@@ -3,7 +3,7 @@ PrimaryExports%%
 #  Import      |       |       | Regrid |        Refresh       | OffSet | Scale  | Variable On |   File   |
 #  Name        | Units | Clim  | Method |     Time Template    | Factor | Factor |     File    | Template |
 # -------------|-------|-------|--------|----------------------|--------|--------|-------------|----------|
-CO_BIOMASS NA  N Y %y4-%m2-%d2t12:00:00 none 1.11 biomass ExtData/PIESA/sfc/QFED/NRT/v2.5r1_0.1_deg/Y%y4/M%m2/qfed2.emis_co.006.%y4%m2%d2.nc4
+CO_BIOMASS NA  N Y %y4-%m2-%d2t12:00:00 none 1.11 biomass ExtData/chemistry/QFED/v2.5r1/sfc/0.1/Y%y4/M%m2/qfed2.emis_co.006.%y4%m2%d2.nc4
 CO_OH NA  Y Y %y4-%m2-%d2t12:00:00 none none oh ExtData/PIESA/L72/gmi_oh_ch4_h2o2_no3.x144_y91_z72_t12.2006.nc
 CO_CH4 NA  Y Y %y4-%m2-%d2t12:00:00 none none ch4 ExtData/PIESA/L72/gmi_oh_ch4_h2o2_no3.x144_y91_z72_t12.2006.nc
 CO_BF NA  Y Y %y4-%m2-%d2t12:00:00 none 1.19 emcobf ExtData/PIESA/sfc/co_biofuel_v2.x360_y181_t12.2001.nc
