--- a/ESMF/GOCART_GridComp/BC_GridComp/GEOSIT/BC_GridComp_ExtData.rc
+++ b/ESMF/GOCART_GridComp/BC_GridComp/GEOSIT/BC_GridComp_ExtData.rc
@@ -17,8 +17,8 @@ BC_ANTEBC2 NA  Y Y %y4-%m2-%d2t12:00:00 none none antebc2 ExtData/chemistry/CEDS
 BC_SHIP NA  Y Y %y4-%m2-%d2t12:00:00 none none bc_ship ExtData/chemistry/CEDS/v2021-04-21/sfc/BC-em-anthro_CMIP_CEDS_gn_shipping.x2304_y1441_t12.%y4.nc4
 
 # Aviation emissions during the LTO, SDC and CRS phases of flight
-BC_AVIATION_LTO NA  Y Y %y4-%m2-%d2t12:00:00 none none bc_aviation /dev/null
-BC_AVIATION_CDS NA  Y Y %y4-%m2-%d2t12:00:00 none none bc_aviation /dev/null
-BC_AVIATION_CRS NA  Y Y %y4-%m2-%d2t12:00:00 none none bc_aviation /dev/null
+BC_AVIATION_LTO NA  Y Y %y4-%m2-%d2t12:00:00 none none bc_aviation ExtData/PIESA/sfc/HTAP/v2.2/htap-v2.2.emis_bc.aviation_lto.x3600_y1800_t12.2010.nc4
+BC_AVIATION_CDS NA  Y Y %y4-%m2-%d2t12:00:00 none none bc_aviation ExtData/PIESA/sfc/HTAP/v2.2/htap-v2.2.emis_bc.aviation_cds.x3600_y1800_t12.2010.nc4
+BC_AVIATION_CRS NA  Y Y %y4-%m2-%d2t12:00:00 none none bc_aviation ExtData/PIESA/sfc/HTAP/v2.2/htap-v2.2.emis_bc.aviation_crs.x3600_y1800_t12.2010.nc4
 %%
 
