--- a/ESMF/GOCART_GridComp/SU_GridComp/GEOSIT/SU_GridComp_ExtData.rc
+++ b/ESMF/GOCART_GridComp/SU_GridComp/GEOSIT/SU_GridComp_ExtData.rc
@@ -27,9 +27,9 @@ SU_OH   NA  N Y %y4-%m2-%d2t12:00:00 none none oh   ExtData/chemistry/MERRA2GMI/
 SU_NO3  NA  N Y %y4-%m2-%d2t12:00:00 none none no3  ExtData/chemistry/MERRA2GMI/v0.0.0/L72/MERRA2_GMI.tavg24_3d_dac_Nv.x576_y361_t12.%y4.nc4
 
 # Aviation emissions during the three phases of flight
-SU_AVIATION_LTO NA  Y Y %y4-%m2-%d2t12:00:00 none none so2_aviation /dev/null
-SU_AVIATION_CDS NA  Y Y %y4-%m2-%d2t12:00:00 none none so2_aviation /dev/null
-SU_AVIATION_CRS NA  Y Y %y4-%m2-%d2t12:00:00 none none so2_aviation /dev/null
+SU_AVIATION_LTO NA  Y Y %y4-%m2-%d2t12:00:00 none none so2_aviation ExtData/PIESA/sfc/HTAP/v2.2/htap-v2.2.emis_so2.aviation_lto.x3600_y1800_t12.2010.nc4
+SU_AVIATION_CDS NA  Y Y %y4-%m2-%d2t12:00:00 none none so2_aviation ExtData/PIESA/sfc/HTAP/v2.2/htap-v2.2.emis_so2.aviation_cds.x3600_y1800_t12.2010.nc4
+SU_AVIATION_CRS NA  Y Y %y4-%m2-%d2t12:00:00 none none so2_aviation ExtData/PIESA/sfc/HTAP/v2.2/htap-v2.2.emis_so2.aviation_crs.x3600_y1800_t12.2010.nc4
 
 # Production of SO2 from OCS oxidation
 pSO2_OCS NA Y Y %y4-%m2-%d2t12:00:00 none none biofuel /dev/null
