--- a/ESMF/GOCART_GridComp/DU_GridComp/GEOSIT/DU_GridComp_ExtData.rc
+++ b/ESMF/GOCART_GridComp/DU_GridComp/GEOSIT/DU_GridComp_ExtData.rc
@@ -3,6 +3,6 @@ PrimaryExports%%
 #  Import      |       |       | Regrid |        Refresh       | OffSet | Scale  | Variable On |   File   |
 #  Name        | Units | Clim  | Method |     Time Template    | Factor | Factor |     File    | Template |
 # -------------|-------|-------|--------|----------------------|--------|--------|-------------|----------|
-DU_SRC        NA  N Y - none none du_src     ExtData/chemistry/DUST/v0.0.0/sfc/gocart.dust_source.v5a.x1152_y721.nc
+DU_SRC NA  N Y - none none du_src ExtData/PIESA/sfc/gocart.dust_source.v5a.x1152_y721.nc
 %%
 
