--- a/ESMF/GOCART_GridComp/NI_GridComp/GEOSIT/NI_GridComp_ExtData.rc
+++ b/ESMF/GOCART_GridComp/NI_GridComp/GEOSIT/NI_GridComp_ExtData.rc
@@ -13,14 +13,14 @@ PrimaryExports%%
 EMI_NH3_BB          'kg.m-2.s-1'         N        Y     %y4-%m2-%d2T12:00:00    none     none    biomass    ExtData/chemistry/QFED/v2.5r1/sfc/0.1/Y%y4/M%m2/qfed2.emis_nh3.006.%y4%m2%d2.nc4
 
 EMI_NH3_AG          'kg.m-2.s-1'         Y        Y     %y4-%m2-%d2T12:00:00    none     none    nh3_emis   /dev/null
-EMI_NH3_EN          'kg.m-2.s-1'         Y        Y     %y4-%m2-%d2T12:00:00    none     none    nh3_emis   ExtData/chemistry/CEDS/v2021-04-21/sfc/NH3-em-anthro_CMIP_CEDS_gn.x2304_y1441_t12.%y4.nc4
+EMI_NH3_EN   'kg.m-2.s-1'  N      Y      %y4-%m2-%d2t12:00:00    none     none      nh3         ExtData/chemistry/CEDS/v2021-04-21/sfc/NH3-em-anthro_CMIP_CEDS_gn.x2304_y1441_t12.%y4.nc4
 EMI_NH3_IN          'kg.m-2.s-1'         Y        Y     %y4-%m2-%d2T12:00:00    none     none    nh3_emis   /dev/null
 EMI_NH3_RE          'kg.m-2.s-1'         Y        Y     %y4-%m2-%d2T12:00:00    none     none    nh3_emis   /dev/null
 EMI_NH3_TR          'kg.m-2.s-1'         Y        Y     %y4-%m2-%d2T12:00:00    none     none    nh3_emis   /dev/null
 
 EMI_NH3_OC          'kg.m-2.s-1'         Y        Y     %y4-%m2-%d2T12:00:00    none     none    emiss_ocn  ExtData/chemistry/GEIA/v0.0.0/sfc/GEIA.emis_NH3.ocean.x576_y361.t12.20080715_12z.nc4
 
-NITRATE_HNO3        'mol.mol-1'          Y        N     %y4-%m2-%d2T12:00:00    none     0.20    hno3       ExtData/chemistry/MERRA2GMI/v0.0.0/L72/MERRA2_GMI.tavg24_3d_dac_Nv.x576_y361_t12.%y4.nc4
+NITRATE_HNO3 'mol.mol-1'   N      N      %y4-%m2-%d2T12:00:00    none     0.20     hno3         ExtData/chemistry/MERRA2GMI/v0.0.0/L72/MERRA2_GMI.tavg24_3d_dac_Nv.x576_y361_t12.%y4.nc4
  
 NI_regionMask NA  N V - none none REGION_MASK ExtData/chemistry/Masks/v0.0.0/sfc/ARCTAS.region_mask.x540_y361.2008.nc
 %%
