prc: made hydrophobic->hydrophilic conversion controllable by a resource file; added a chemical loss time scale for carbon

--- a/ESMF/GOCART2G_GridComp/CA2G_GridComp/CA2G_StateSpecs.rc
+++ b/ESMF/GOCART2G_GridComp/CA2G_GridComp/CA2G_StateSpecs.rc
@@ -84,6 +84,7 @@ category: EXPORT
  CADP*      | kg m-2 s-1 | xy  | N   | nbins | Carbonaceous Aerosol Dry Deposition (Bin %d)
  CAWT*      | kg m-2 s-1 | xy  | N   | nbins | Carbonaceous Aerosol Wet Deposition (Bin %d)
  CASV*      | kg m-2 s-1 | xy  | N   | nbins | Carbonaceous Aerosol Convective Scavenging (Bin %d)
+ CACH*      | kg m-2 s-1 | xy  | N   | nbins | Carbonaceous Aerosol Parameterized Chemical Loss (Bin %d)
  CAEMAN*    | kg m-2 s-1 | xy  | N   |       | Carbonaceous Aerosol Anthropogenic Emissions     
  CAEMBB*    | kg m-2 s-1 | xy  | N   |       | Carbonaceous Aerosol Biomass Burning Emissions     
  CAEMBF*    | kg m-2 s-1 | xy  | N   |       | Carbonaceous Aerosol Biofuel Emissions             
