--- a/ESMF/GOCART_GridComp/CH4_GridComp/CMakeLists.txt
+++ b/ESMF/GOCART_GridComp/CH4_GridComp/CMakeLists.txt
@@ -2,9 +2,8 @@ esma_set_this ()
 
 esma_add_library (${this}
   SRCS ${this}Mod.F90
-  DEPENDENCIES Chem_Shared Chem_Base GMAO_mpeu MAPL_cfio_r4
+  DEPENDENCIES Chem_Shared Chem_Base GMAO_mpeu MAPL_cfio_r4 NetCDF::NetCDF_Fortran
   )
-target_include_directories (${this} PUBLIC ${INC_NETCDF})
 esma_generate_gocart_code (${this} "-B\;-E\;-F\;-N\;GOCART")
 
 file (GLOB_RECURSE rc_files CONFIGURE_DEPENDS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.rc)
