--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -7,12 +7,12 @@
 * @GEOS-ESM/aerosol-team
 
 # NOAA Extras are Tom, Weiyuan for now
-/CCPP/                  @GEOS-ESM/mapl-team
-/ESMF/Aerosol_GridComp/ @GEOS-ESM/mapl-team
-/ESMF/NUOPC/            @GEOS-ESM/mapl-team
-/ESMF/UFS/              @GEOS-ESM/mapl-team
+/CCPP/                  @GEOS-ESM/mapl-team @amdasilva
+/ESMF/Aerosol_GridComp/ @GEOS-ESM/mapl-team @amdasilva
+/ESMF/NUOPC/            @GEOS-ESM/mapl-team @amdasilva
+/ESMF/UFS/              @GEOS-ESM/mapl-team @amdasilva
 
 # The CMake Team should know/approve these
-/.github/    @GEOS-ESM/cmake-team
-/.circleci/  @GEOS-ESM/cmake-team
-/.codebuild/ @GEOS-ESM/cmake-team
+/.github/    @GEOS-ESM/cmake-team @amdasilva
+/.circleci/  @GEOS-ESM/cmake-team @amdasilva
+/.codebuild/ @GEOS-ESM/cmake-team @amdasilva
