Added OpenMP to CMakeLists.txt files and GOCART2G_Process.F90

--- a/ESMF/GOCART2G_GridComp/CA2G_GridComp/CMakeLists.txt
+++ b/ESMF/GOCART2G_GridComp/CA2G_GridComp/CMakeLists.txt
@@ -14,4 +14,6 @@ foreach ( file ${rc_files} )
    install( FILES ${file} DESTINATION etc/${dir} )
 endforeach()
 
-
+if (OMP)
+   target_link_libraries(${this} PRIVATE OpenMP::OpenMP_Fortran)
+endif ()
