--- a/ESMF/GOCART2G_GridComp/CA2G_GridComp/AMIP/CA2G_GridComp_ExtData.yaml
+++ b/ESMF/GOCART2G_GridComp/CA2G_GridComp/AMIP/CA2G_GridComp_ExtData.yaml
@@ -25,11 +25,11 @@ Collections:
   CA2G_qfed2.emis_oc.006.%y4%m2%d2.nc4:
     template: ExtData/chemistry/QFED/v2.5r1/sfc/0.1/Y%y4/M%m2/qfed2.emis_oc.006.%y4%m2%d2.nc4
     valid_range: "2000-03-1T12:00/2025-01-01"
-  CA2G_hfed.emis_bc.x576_y361_t14.%y4%m2.nc4:
-    template: ExtData/chemistry/HFED/v1.0/Y%y4/%M2/hfed.emis_bc.x576_y361_t14.%y4%m2.nc4
+  CA2G_hfed.emis_bc.x576_y361.%y4%m2.nc4:
+    template: ExtData/chemistry/HFED/v1.0/Y%y4/%M2/hfed.emis_bc.x576_y361.%y4%m2.nc4
     valid_range: "1960-01-16T12:00/2000-12-16T12:00"
-  CA2G_hfed.emis_oc.x576_y361_t14.%y4%m2.nc4:
-    template: ExtData/chemistry/HFED/v1.0/Y%y4/%m2/hfed.emis_oc.x576_y361_t14.%y4%m2.nc4
+  CA2G_hfed.emis_oc.x576_y361.%y4%m2.nc4:
+    template: ExtData/chemistry/HFED/v1.0/Y%y4/%m2/hfed.emis_oc.x576_y361.%y4%m2.nc4
     valid_range: "1960-01-16T12:00/2000-012-16T12:00"
 
 Samplings:
@@ -82,7 +82,7 @@ Exports:
     sample: CA2G_sample_2
     variable: biofuel
   BC_BIOMASS:
-    - {starting: "1960-01-16T12:00", collection: CA2G_hfed.emis_oc.x576_y361_t14.%y4%m2.nc4, linear_transformation: [0.0, 0.778], regrid: CONSERVE, sample: CA2G_sample_1, variable: biomass}
+    - {starting: "1960-01-16T12:00", collection: CA2G_hfed.emis_oc.x576_y361.%y4%m2.nc4, linear_transformation: [0.0, 0.778], regrid: CONSERVE, sample: CA2G_sample_1, variable: biomass}
     - {starting: "2000-03-01T12:00", collection: CA2G_qfed2.emis_oc.006.%y4%m2%d2.nc4, linear_transformation: [0.0, 0.778], regrid: CONSERVE, sample: CA2G_sample_1, variable: biomass}
   BC_SHIP:
     collection: CA2G_BC-em-anthro_CMIP_CEDS_gn_shipping.x2304_y1441_t12.%y4.nc4
@@ -125,8 +125,8 @@ Exports:
     sample: CA2G_sample_2
     variable: biofuel
   BRC_BIOMASS:
-    - {starting: "1960-01-16T12:00", collection: CA2G_hfed.emis_oc.x576_y361_t14.%y4%m2.nc4, linear_transformation: [0.0, 0.778], regrid: CONSERVE, sample: CA2G_sample_1, variable: biomass}
-    - {starting: "2000-03-01T12:00", collection: CA2G_qfed2.emis_oc.006.%y4%m2%d2.nc4, linear_transformation: [0.0, 0.778], regrid: CONSERVE, sample: CA2G_sample_1, variable: biomass}
+    - {starting: "1960-01-16T12:00", collection: CA2G_hfed.emis_bc.x576_y361.%y4%m2.nc4, linear_transformation: [0.0, 0.778], regrid: CONSERVE, sample: CA2G_sample_1, variable: biomass}
+    - {starting: "2000-03-01T12:00", collection: CA2G_qfed2.emis_bc.006.%y4%m2%d2.nc4, linear_transformation: [0.0, 0.778], regrid: CONSERVE, sample: CA2G_sample_1, variable: biomass}
   BRC_SHIP:
     collection: /dev/null
     regrid: CONSERVE
