--- a/ESMF/GOCART_GridComp/CFC_GridComp/CMakeLists.txt
+++ b/ESMF/GOCART_GridComp/CFC_GridComp/CMakeLists.txt
@@ -7,7 +7,7 @@ target_include_directories (${this} PUBLIC ${INC_ESMF} ${INC_NETCDF})
 
 esma_generate_gocart_code (${this} "-B\;-C\;-N\;GOCART")
 
-file (GLOB_RECURSE rc_files CONFIGURE_DEPENDS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.rc)
+file (GLOB_RECURSE rc_files CONFIGURE_DEPENDS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.rc *.yaml)
 foreach ( file ${rc_files} )
    get_filename_component( dir ${file} DIRECTORY )
    install( FILES ${file} DESTINATION etc/${dir} )
