--- a/ESMF/GOCART2G_GridComp/NI2G_GridComp/NI2G_StateSpecs.rc
+++ b/ESMF/GOCART2G_GridComp/NI2G_GridComp/NI2G_StateSpecs.rc
@@ -100,13 +100,14 @@ category: INTERNAL
 #---------------------------------------------------------------------------------------------------------------
 #  VARIABLE       | DIMENSION   |          Additional Metadata
 #---------------------------------------------------------------------------------------------------------------
-  NAME  | UNITS   | DIMS | VLOC | RESTART              | ADD2EXPORT | FRIENDLYTO                | LONG NAME
+  NAME  | UNITS   | DIMS | VLOC | RESTART              | ADD2EXPORT | DEFAULT |FRIENDLYTO                | LONG NAME
 #---------------------------------------------------------------------------------------------------------------
- NH3    | kg kg-1 | xyz  | C    | MAPL_RestartOptional | T          | DYNAMICS:TURBULENCE:MOIST | Ammonia (NH3, gas phase)
- NH4a   | kg kg-1 | xyz  | C    | MAPL_RestartOptional | T          | DYNAMICS:TURBULENCE:MOIST | Ammonium ion (NH4+, aerosol phase)
- NO3an1 | kg kg-1 | xyz  | C    | MAPL_RestartOptional | T          | DYNAMICS:TURBULENCE:MOIST | Nitrate size bin 001
- NO3an2 | kg kg-1 | xyz  | C    | MAPL_RestartOptional | T          | DYNAMICS:TURBULENCE:MOIST | Nitrate size bin 002
- NO3an3 | kg kg-1 | xyz  | C    | MAPL_RestartOptional | T          | DYNAMICS:TURBULENCE:MOIST | Nitrate size bin 003
+ NH3    | kg kg-1 | xyz  | C    | MAPL_RestartOptional | T          | | DYNAMICS:TURBULENCE:MOIST | Ammonia (NH3, gas phase)
+ NH4a   | kg kg-1 | xyz  | C    | MAPL_RestartOptional | T          | | DYNAMICS:TURBULENCE:MOIST | Ammonium ion (NH4+, aerosol phase)
+ NO3an1 | kg kg-1 | xyz  | C    | MAPL_RestartOptional | T          | | DYNAMICS:TURBULENCE:MOIST | Nitrate size bin 001
+ NO3an2 | kg kg-1 | xyz  | C    | MAPL_RestartOptional | T          | | DYNAMICS:TURBULENCE:MOIST | Nitrate size bin 002
+ NO3an3 | kg kg-1 | xyz  | C    | MAPL_RestartOptional | T          | | DYNAMICS:TURBULENCE:MOIST | Nitrate size bin 003
+ xhno3  | kg kg-1 | xyz  | C    |                      | F          | MAPL_UNDEF |                          | my_xhno3 
 
 
 #********************************************************
